--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,88 +1,58 @@
+:root {
+    --bg-z-index: 0;
+    --element-z-index:1;
+}
+
 
 .1_11 {
     overflow:hidden;
-    
-
 }
 .e1_11 {
-    width:1920px;
-    height:1941px;
+
     position:relative;
+    left:169px;
 }
 
-/* header */
-.e8_39 {
-    width:1175px;
-    height:300px;
-    position:absolute;
-    left:169px;
-    top:1%;
-    border-bottom: 2px solid rgba(0, 0, 0, 0.2);
-    font-weight: bold;
+
+/* desciption  */
+.34_96 {
+    overflow:hidden;
 }
-.e1_19 {
-    color:rgba(0, 0, 0, 1);
-    width:58px;
-    height:24px;
+.e34_96 {
+    width:945px;
+    height:350px;
+    position:relative;
+    z-index: var(--element-z-index);
+}
+
+.e34_95 {
+    width:299px;
+    height:247px;
     position:absolute;
-    left:400px;
-    top:50%;
+    left:50%;
+    top:62px;
+}
+.e22_61 {
+    color:rgba(0, 0, 0, 1);
+    width:299px;
+    height:183px;
+    position:absolute;
+    left:0px;
+    top:0px;
     font-family:Inter;
     text-align:left;
-    font-size:20px;
+    font-size:50px;
     letter-spacing:0;
 }
-.e2_2 {
-    color:rgba(0, 0, 0, 1);
-    width:51px;
-    height:24px;
-    position:absolute;
-    left:534px;
-    top:50%;
-    font-family:Inter;
-    text-align:left;
-    font-size:20px;
-    letter-spacing:0;
-}
-.e2_7 {
-    color:rgba(0, 0, 0, 1);
-    width:91px;
-    height:24px;
-    position:absolute;
-    left:656px;
-    top:50%;
-    font-family:Inter;
-    text-align:left;
-    font-size:20px;
-    letter-spacing:0;
-}
-.e2_10 {
-    width:41px;
-    height:41px;
-    position:absolute;
-    left:818px;
-    top:50%;
-    background-image:url(images/263142_1.png);
-    background-repeat:no-repeat;
-    background-size:cover;
-}
-.e2_4 {
-    width:279px;
-    height:185px;
-    position:absolute;
-    background-image:url(images/logo1.png);
-    background-repeat:no-repeat;
-    background-size:cover;
-}
-.e2_9 {
+.e22_67 {
     background-color:rgba(0, 0, 0, 1);
     width:163px;
     height:44px;
     position:absolute;
-    left:916px;
-    top:50%;
+    left:18px;
+    top:203px;
 }
-.e2_8 {
+.e22_68 {
     color:rgba(253.08750182390213, 234.10593956708908, 234.10593956708908, 1);
     width:143px;
     height:24px;
@@ -90,298 +60,304 @@
     left:10px;
     top:10px;
     font-family:Inter;
-    text-align:left;
+    text-align:center;
     font-size:20px;
     letter-spacing:0;
 }
-.e2_17 {
-    box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25);
-    width:1175px;
-    height:0px;
+
+/* Top 3 */
+.40_4 {
+    overflow:hidden;
+}
+.e40_4 {
+    width:1011.5px;
+    height:367px;
+    position:relative;
+    left:5%;
+   margin-bottom:50px;
+}
+.e34_86 {
+    width:1011.5px;
+    height:367px;
     position:absolute;
     left:0px;
-    top:195.5px;
+    top:0px;
 }
-.2_17 {
-    border:0.5px solid rgba(0, 0, 0, 1);
+.e34_93 {
+
+    width:111px;
+    height:36px;
+    position:absolute;
+    left:875px;
+    top:49px;
+    font-family:Inter;
+    text-align:left;
+    font-size:30px;
+    letter-spacing:0;
+}
+.e34_93 a{
+    text-decoration: none;
+    color:black;
+}
+.e34_93 a:hover{
+    color:blue;
 }
 
-/* footer */
-.e8_40 {
-    width:1175px;
-    height:300px;
-    position:absolute;
-    left:169px;
-    top:1600px;
-    border-top:2px solid rgba(0, 0, 0, 0.2);
-    font-weight: bold;
 
-}
-.e4_20 {
-    
-    width:279px;
-    height:185px;
+.e22_74 {
+    background-color:rgba(217.0000022649765, 217.0000022649765, 217.0000022649765, 0.7);
+    width:309px;
+    height:259px;
     position:absolute;
-    background-image:url(images/logo1.png);
-    background-repeat:no-repeat;
-    background-size:cover;
-    
-    
+    left:0px;
+    top:108px;
+    border-top-left-radius:37px;
+    border-top-right-radius:37px;
+    border-bottom-left-radius:37px;
+    border-bottom-right-radius:37px;
 }
-.4_20 {
-    border:0.5px solid rgba(0, 0, 0, 1);
+
+.e22_74 img{
+    position: absolute;
+    top: 10px;
+    left: 15px;
+    width:280px;
+    border-radius:20px;
 }
-.e4_19 {
-    width:279px;
-    height:185px;
-    position:absolute;
-    left:21px;
-    top:67px;
-    background-image:url(images/logo1.png);
-    background-repeat:no-repeat;
-    background-size:cover;
-}
-.e4_21 {
+.e22_73 {
     color:rgba(0, 0, 0, 1);
-    width:131px;
+    width:342px;
+    height:61px;
+    position:absolute;
+    left:29px;
+    top:0px;
+    font-family:Inter;
+    text-align:left;
+    font-size:50px;
+    letter-spacing:0;
+}
+.e34_87 {
+    background-color:rgba(217.0000022649765, 217.0000022649765, 217.0000022649765, 0.7);
+    width:309px;
+    height:259px;
+    position:absolute;
+    left:363px;
+    top:108px;
+    border-top-left-radius:37px;
+    border-top-right-radius:37px;
+    border-bottom-left-radius:37px;
+    border-bottom-right-radius:37px;
+    display: flex;
+    justify-content: center;
+
+}
+
+.e34_87 img{
+    position: absolute;
+    top: 10px;
+    left: 15px;
+    width:280px;
+    border-radius:20px;
+}
+
+.e34_88 {
+    background-color:rgba(217.0000022649765, 217.0000022649765, 217.0000022649765, 0.7);
+    width:309px;
+    height:259px;
+    position:absolute;
+    left:702.5px;
+    top:107.5px;
+    border-radius:37px;
+}
+
+.e34_88 img{
+    position: absolute;
+    top: 10px;
+    left: 15px;
+    width:280px;
+    border-radius:20px;
+}
+.e34_83 {
+    background-color:rgba(255, 255, 255, 1);
+    width:222px;
     height:56px;
     position:absolute;
-    left:449px;
-    top:39px;
-    font-family:Inter;
-    text-align:left;
-    font-size:32px;
-    letter-spacing:0;
+    left:43px;
+    top:297px;
+    border-top-left-radius: 37px;
+    border-top-right-radius: 37px;
+    border-bottom-left-radius: 37px;
+    border-bottom-right-radius: 37px;
 }
-.e4_25 {
+.e40_2 {
     color:rgba(0, 0, 0, 1);
-    width:328px;
-    height:39px;
+    width:138px;
+    height:43px;
     position:absolute;
-    left:790px;
-    top:39px;
+    left:85px;
+    top:302px;
     font-family:Inter;
     text-align:left;
-    font-size:32px;
+    font-size:30px;
     letter-spacing:0;
 }
-.e4_22 {
+.e34_85 {
+    background-color:rgba(255, 255, 255, 1);
+    width:222px;
+    height:56px;
+    position:absolute;
+    left:415px;
+    top:297px;
+    border-top-left-radius: 37px;
+    border-top-right-radius: 37px;
+    border-bottom-left-radius: 37px;
+    border-bottom-right-radius: 37px;
+}
+.e34_84 {
+    background-color:rgba(255, 255, 255, 1);
+    width:222px;
+    height:56px;
+    position:absolute;
+    left:746px;
+    top:297px;
+    border-top-left-radius: 37px;
+    border-top-right-radius: 37px;
+    border-bottom-left-radius: 37px;
+    border-bottom-right-radius: 37px;
+}
+.e40_8 {
     color:rgba(0, 0, 0, 1);
-    width:58px;
-    height:24px;
+    width:138px;
+    height:43px;
     position:absolute;
-    left:485px;
-    top:116px;
+    left:460px;
+    top:302px;
     font-family:Inter;
     text-align:left;
-    font-size:20px;
+    font-size:30px;
     letter-spacing:0;
-}
-.e4_23 {
-    color:rgba(0, 0, 0, 1);
-    width:99px;
-    height:24px;
-    position:absolute;
-    left:465px;
-    top:160px;
-    font-family:Inter;
-    text-align:left;
-    font-size:20px;
-    letter-spacing:0;
-}
-.e4_24 {
-    color:rgba(0, 0, 0, 1);
-    width:89px;
-    height:24px;
-    position:absolute;
-    left:470px;
-    top:204px;
-    font-family:Inter;
-    text-align:left;
-    font-size:20px;
-    letter-spacing:0;
-}
-.e8_34 {
-    color:rgba(0, 0, 0, 1);
-    width:147px;
-    height:24px;
-    position:absolute;
-    left:441px;
-    top:248px;
-    font-family:Inter;
-    text-align:left;
-    font-size:20px;
-    letter-spacing:0;
-}
-.e7_30 {
-    width:36px;
-    height:37px;
-    position:absolute;
-    left:801px;
-    top:263px;
-    background-image:url(images/email.png);
-    background-repeat:no-repeat;
-    background-size:cover;
-}
-.e7_32 {
-    width:38px;
-    height:45px;
-    position:absolute;
-    left:799px;
-    top:90px;
-    background-image:url(images/gps.png);
-    background-repeat:no-repeat;
-    background-size:cover;
-}
-.e7_33 {
-    width:38px;
-    height:41px;
-    position:absolute;
-    left:800px;
-    top:181px;
-    background-image:url(images/phone.png);
-    background-repeat:no-repeat;
-    background-size:cover;
-}
-.e8_36 {
-    color:rgba(0, 0, 0, 1);
-    width:303px;
-    height:36px;
-    position:absolute;
-    left:865px;
-    top:102px;
-    font-family:Inter;
-    text-align:left;
-    font-size:15px;
-    letter-spacing:0;
-}
-.e8_37 {
-    color:rgba(0, 0, 0, 1);
-    width:156px;
-    height:36px;
-    position:absolute;
-    left:865px;
-    top:186px;
-    font-family:Inter;
-    text-align:left;
-    font-size:15px;
-    letter-spacing:0;
-}
-.e8_38 {
-    color:rgba(0, 0, 0, 1);
-    width:209px;
-    height:18px;
-    position:absolute;
-    left:865px;
-    top:272px;
-    font-family:Inter;
-    text-align:left;
-    font-size:15px;
-    letter-spacing:0;
-}
 
+}
+.e40_9 {
+    color:rgba(0, 0, 0, 1);
+    width:138px;
+    height:43px;
+    position:absolute;
+    left:788px;
+    top:304px;
+    font-family:Inter;
+    text-align:left;
+    font-size:30px;
+    letter-spacing:0;
+}
 
 /* column */
-.e18_58 { 
-	width:1176px;
-	height:1940px;
-        left:169px;
-	position:absolute;
+.h18_58 {
+    width:1176px;
+    height:768px;
+    position:absolute;
+    z-index: var(--bg-z-index);
+ 
 }
-.e18_44 { 
-	background-color:rgba(255, 0, 0, 0.10000000149011612);
-	width:75px;
-	height:1941px;
-	position:absolute;
-	left:801px;
-	top:0px;
+.h18_44 {
+    background-color:rgba(255, 0, 0, 0.10000000149011612);
+    width:75px;
+    height:768px;
+    position:absolute;
+    left:801px;
+    top:0px;
 }
-.e18_52 { 
-	background-color:rgba(255, 0, 0, 0.10000000149011612);
-	width:75px;
-	height:1941px;
-	position:absolute;
-	left:901px;
-	top:0px;
+.h18_52 {
+    background-color:rgba(255, 0, 0, 0.10000000149011612);
+    width:75px;
+     height:768px;
+    position:absolute;
+    left:901px;
+    top:0px;
 }
-.e18_53 { 
-	background-color:rgba(255, 0, 0, 0.10000000149011612);
-	width:75px;
-	height:1941px;
-	position:absolute;
-	left:1000px;
-	top:0px;
+.h18_53 {
+    background-color:rgba(255, 0, 0, 0.10000000149011612);
+    width:75px;
+   height:768px;
+    position:absolute;
+    left:1000px;
+    top:0px;
 }
-.e18_54 { 
-	background-color:rgba(255, 0, 0, 0.10000000149011612);
-	width:75px;
-	height:1941px;
-	position:absolute;
-	left:1101px;
-	top:0px;
+.h18_54 {
+    background-color:rgba(255, 0, 0, 0.10000000149011612);
+    width:75px;
+   height:768px;
+    position:absolute;
+    left:1101px;
+    top:0px;
 }
-.e18_45 { 
-	background-color:rgba(255, 0, 0, 0.10000000149011612);
-	width:75px;
-	height:1941px;
-	position:absolute;
-	left:100px;
-	top:0px;
+.h18_45 {
+    background-color:rgba(255, 0, 0, 0.10000000149011612);
+    width:75px;
+    height:768px;
+    position:absolute;
+    left:100px;
+    top:0px;
 }
-.e18_57 { 
-	background-color:rgba(255, 0, 0, 0.10000000149011612);
-	width:75px;
-	height:1941px;
-	position:absolute;
-	left:0px;
-	top:0px;
+.h18_57 {
+    background-color:rgba(255, 0, 0, 0.10000000149011612);
+    width:75px;
+   height:768px;
+    position:absolute;
+    left:0px;
+    top:0px;
 }
-.e18_46 { 
-	background-color:rgba(255, 0, 0, 0.10000000149011612);
-	width:75px;
-	height:1941px;
-	position:absolute;
-	left:701px;
-	top:0px;
+.h18_46 {
+    background-color:rgba(255, 0, 0, 0.10000000149011612);
+    width:75px;
+    height:768px;
+    position:absolute;
+    left:701px;
+    top:0px;
 }
-.e18_47 { 
-	background-color:rgba(255, 0, 0, 0.10000000149011612);
-	width:75px;
-	height:1941px;
-	position:absolute;
-	left:601px;
-	top:0px;
+.h18_47 {
+    background-color:rgba(255, 0, 0, 0.10000000149011612);
+    width:75px;
+    height:768px;
+    position:absolute;
+    left:601px;
+    top:0px;
 }
-.e18_48 { 
-	background-color:rgba(255, 0, 0, 0.10000000149011612);
-	width:75px;
-	height:1941px;
-	position:absolute;
-	left:500px;
-	top:0px;
+.h18_48 {
+    background-color:rgba(255, 0, 0, 0.10000000149011612);
+    width:75px;
+    height:768px;
+    position:absolute;
+    left:500px;
+    top:0px;
 }
-.e18_49 { 
-	background-color:rgba(255, 0, 0, 0.10000000149011612);
-	width:75px;
-	height:1941px;
-	position:absolute;
-	left:400px;
-	top:0px;
+.h18_49 {
+    background-color:rgba(255, 0, 0, 0.10000000149011612);
+    width:75px;
+    height:768px;
+    position:absolute;
+    left:400px;
+    top:0px;
 }
-.e18_50 { 
-	background-color:rgba(255, 0, 0, 0.10000000149011612);
-	width:75px;
-	height:1941px;
-	position:absolute;
-	left:300px;
-	top:0px;
+.h18_50 {
+    background-color:rgba(255, 0, 0, 0.10000000149011612);
+    width:75px;
+    height:768px;
+    position:absolute;
+    left:300px;
+    top:0px;
 }
-.e18_51 { 
-	background-color:rgba(255, 0, 0, 0.10000000149011612);
-	width:75px;
-	height:1941px;
-	position:absolute;
-	left:200px;
-	top:0px;
+.h18_51 {
+    background-color:rgba(255, 0, 0, 0.10000000149011612);
+    width:75px;
+    height:768px;
+    position:absolute;
+    left:200px;
+    top:0px;
 }
+
+
+
+
+
 
